@@ -9,6 +9,8 @@ TODO tcp_connection::tcpv4_ev does not handle EOF well, or does it? (CHECK)
    - better retry behaviour on key mismatch.
    - use select-based io_manager instead of poll-based one.
    - share io manager between rxvt-unicode and vpe.
+   - sooo many *BSD workarounds because no BSD I could find is even
+     remotely POSIX-compatible.
 
 1.2 Fri Oct 17 03:44:44 CEST 2003
    - protocol version 0.1.
